deployment/deploy-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smart-edge-management
  namespace: aialive-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx-dev
spec:
  rules:
  - host: dev.brain.lenovo.com
    http:
      paths:
      - path: /smart-edge-management
        backend:
          serviceName: smart-edge-management
          servicePort: 8080
  tls:
  - hosts:
    - dev.brain.lenovo.com
    secretName: dev.brain.lenovo.com
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smart-edge-management
  name: smart-edge-management
  namespace: aialive-dev
spec:
  ports:
  - name: smart-edge-management
    port: 8080        
    protocol: TCP
    targetPort: 8080
  selector:
    app: smart-edge-management
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: smart-edge-management
  namespace: aialive-dev
spec:
  replicas: 1
  template: 
    metadata:
      labels: 
        app: smart-edge-management
    spec:
      hostAliases:
      - ip: "10.110.156.64"
        hostnames:
        - "smart-edge.brain.lenovo.com"
      nodeSelector:
        node: worker
      containers: 
      - name: smart-edge-management  
        image: hub.cap.lenovo.com/aialive/smart-edge-management:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: time
          mountPath: /etc/localtime   
        - name: timezone
          mountPath: /etc/timezone
          subPath: timezone
        - name: video
          mountPath: /data/videos/
      volumes:
      - name: time
        hostPath:
          path: /etc/localtime
      - name: video
        persistentVolumeClaim:
          claimName: smart-edge-management
      - name: timezone
        configMap:
          name: timezone
